Fixed navbar collapse in all pages

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
 .navbar {
   background: #05386b;
+  z-index: 999;
 }
 
 .nav-link,
@@ -39,19 +46,11 @@
 }
 
 .header {
-  background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.1), rgba(25, 25, 25, 0.2)), url('../assets/head2.jpg');
+  background-image: linear-gradient(-45deg, rgba(255, 255, 255, 0.6), rgba(25, 25, 25, 0.4)), url('../assets/head2.jpg');
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
-}
-
-.overlay {
-  position: absolute;
-  min-height: 100%;
-  min-width: 100%;
-  left: 0;
-  top: 0;
-  background: rgba(225, 225, 225, 0.4);
+  overflow: hidden;
 }
 
 .description {
